--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" />
-    
+    <link href="https://fonts.googleapis.com/css2?family=Eudoxus+Sans&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <div  id="root"></div>
